--- a/examples/mfa_demo/src/main/res/values/colors.xml
+++ b/examples/mfa_demo/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_500">#A020F0</color>
 </resources>
